components/edit/dividends/Pagination.module.scss
.pagination {
  display: flex;
  justify-content: center;
  width: 82rem;
  margin-left: 3rem;
  margin-top: 3rem;
}

.pageBtn {
  background-color: #fff;
  color: var(--deep-green);
  width: 4.1rem;
  height: 4.4rem;
  border: 1px solid gainsboro;
  font-size: 1.6rem;
  margin-left: -1px;

  &:focus {
    outline: none;
  }

  &:hover {
    cursor: pointer;
    background-color: rgb(15, 154, 122, .2);
  }
}

.currentPage {
  background-color: rgb(15, 154, 122, .2);
}

